# find-biz

backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/: chat_ops.py  install_runs.py  providers.py  router.py  skills.py
backend/app/core/: config.py  errors.py
backend/app/schemas/: chat_ops.py  common.py  install_runs.py  providers.py  skills.py
backend/app/services/: store.py
backend/docs/: README.md
docs/: 00-code-rules.md  01-ia-wireframe.md  02-action-spec.md  03-mvp-checklist.md  04-domain-model.md  05-api-contract.md  06-job-lifecycle.md  07-provider-adapter-spec.md  08-security-and-ops.md  09-ui-design-spec.md  10-orchestration-plan.md  11-md-inventory-and-cleanup.md  README.md
docs/archive/: README.md
docs/archive/backend-docs/: SUMMARY.md
docs/archive/frontend-docs/: SUMMARY.md
docs/archive/regacy-docs/: SUMMARY.md
docs/backend/: 01-backend-work-plan.md  02-feature-breakdown-and-flow.md
docs/frontend/: 00-frontend-playbook.md  README.md
docs/frontend/mockup/: index.html
regacy-docs/: api-spec-admin.md  api-spec.md  history.md  requirements.md  schema.md  setup.md  todo.md  ui-design-admin.md  ui-design.md
skills/: SKILL.md
skills/references/: be-ticket-template.md  doc-map.md  fe-ticket-template.md
